menu in the page gb

--- a/music.html
+++ b/music.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" x-data="{menuIsOpen:false}">
+<html lang="en" x-data="{ menuIsOpen:false }">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Music</title>
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/styles.css">
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script defer src="https://unpkg.com/alpinejs%22%3E"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,500;1,500&family=Karma:wght@400;500&family=Kdam+Thmor+Pro&family=Laila:wght@400;500&family=Lato:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+    <style>@import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,500;1,500&family=Karma:wght@400;500&family=Kdam+Thmor+Pro&family=Laila:wght@400;500&family=Lato:ital,wght@0,700;1,700&display=swap');
+        font-family: 'K2D', sans-serif;
+        font-family: 'Karma', serif;
+        font-family: 'Kdam Thmor Pro', sans-serif;
+        font-family: 'Laila', sans-serif;
+        font-family: 'Lato', sans-serif;
+    </style>
     <style>
         .menu {
             position: fixed;
@@ -15,7 +25,7 @@
             left: 0;
             width: 100vw;
             height: 100vh;
-            background: #fff;
+            background-color: #af9e9e;
             display: grid;
             place-content: center;
         }
@@ -32,36 +42,38 @@
 <body>
     <header>
         <a href="./indexGB.html">
-            <img class="menu-accueil"src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD 1.webp" alt="#">
+            <img class="logo_principal"src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD 1.webp" alt="Logo of the WebSite">
         </a>
-        <button @click="menuIsOpen = ! menuIsOpen">
-            <img aria-controls="mainNav"  class="header_menu" src="./public/icon/tinify-2022-11-16T10_17_52/Menu .webp" alt="#">
+        <button class="header_menu btndumenu" @click="menuIsOpen = ! menuIsOpen">
+            <img aria-controls="mainNav" src="./public/icon/tinify-2022-11-16T10_17_52/Menu .webp" alt="Icon of the menu">
         </button>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
     
-            <button @click="menuIsOpen = ! menuIsOpen">
-                <img src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="#">
+            <button class="icon_cross_menu imgcross" @click="menuIsOpen = ! menuIsOpen">
+                <img class="icon_cross_menu" src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="#">
             </button>
             <h2>Menu</h2>
             <ul>
-                <li><a href="./music.html">An interesting music</a></li>
-                <li><a href="./book.html">The book for the environment</a></li>
-                <li><a href="./series.html">The series that sums it all up</a></li>
-                <li><a href="./place.html">Most unequal place in the world</a></li>
-                <li><a href="./hopes.html">A great hope for the world</a></li>
-                <li><a href="./regrets.html">A regret of this generation</a></li>
-                <li><a href="./other_project.html">Other project</a></li>
+                <li class="header_text"><a href="./music.html" style="color: #000000">An interesting music</a></li>
+                <li><a href="./book.html" style="color: #000000">The book for the environment</a></li>
+                <li><a href="./series.html" style="color: #000000">The Series that sums it all up</a></li>
+                <li><a href="./place.html" style="color: #000000">Most unequal place in the world</a></li>
+                <li><a href="./hopes.html" style="color: #000000">A great hope for the world</a></li>
+                <li><a href="./regrets.html" style="color: #000000">A regret of this generation</a></li>
+                <li><a href="./other_project.html" style="color: #000000">Other project</a></li>
             </ul>
-            <ul> 
-                <li><a href="./glossary.html">Glossary</a></li>
-                <li><a href="./about_me.html">About me</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul> 
+            <hr width="110%">
             <ul>
-                <li><a href="./index.html"><img src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="#"></a></li>
-                <li><a href="./indexGB.html"><img src="./public/icon/tinify-2022-11-16T10_17_52/GB.webp" alt="#"></a></li>
+                <a href="./glossary.html" style="color: #000000" class="gac">Glossary</a>
+                <a href="./about_me.html" style="color: #000000" class="gac">About me</a>
+                <a href="./contact-me.html" style="color: #000000" class="gac">Contact</a>
             </ul>
-   </header>
+            <ul>
+                <a href="./index.html"><img class="flag_fr"src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="Icone pour passer dans la langue francaise"></a>
+                <a href="./indexGB.html"><img class="flag_gb" src="./public/icon/tinify-2022-11-16T10_17_52/GB.webp" alt="Icone pour passer dans la langue anglaise"></a>
+            </ul>
+        </nav>         
+    </header>
     <h1>An interesting music</h1>
     <body>
     <p>
