--- a/contact-me.html
+++ b/contact-me.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="src/styles.css">
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script defer src="https://unpkg.com/alpinejs%22%3E"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,500;1,500&family=Karma:wght@400;500&family=Kdam+Thmor+Pro&family=Laila:wght@400;500&family=Lato:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+    <style>@import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,500;1,500&family=Karma:wght@400;500&family=Kdam+Thmor+Pro&family=Laila:wght@400;500&family=Lato:ital,wght@0,700;1,700&display=swap');
+        font-family: 'K2D', sans-serif;
+        font-family: 'Karma', serif;
+        font-family: 'Kdam Thmor Pro', sans-serif;
+        font-family: 'Laila', sans-serif;
+        font-family: 'Lato', sans-serif;
+    </style>
     <style>
         .menu {
             position: fixed;
@@ -31,40 +41,38 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">
-            <img class="logo_principal"src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD 1.webp" alt="Logo du Site Internet">
+        <a href="./indexGB.html">
+            <img class="logo_principal"src="public/icon/tinify-2022-11-16T10_17_52/Logo DOTCWORLD 1.webp" alt="Logo of the WebSite">
         </a>
         <button class="header_menu btndumenu" @click="menuIsOpen = ! menuIsOpen">
-            <img aria-controls="mainNav" src="./public/icon/tinify-2022-11-16T10_17_52/Menu .webp" alt="Icone de menu">
+            <img aria-controls="mainNav" src="./public/icon/tinify-2022-11-16T10_17_52/Menu .webp" alt="Icon of the menu">
         </button>
         <nav id="mainNav" x-show="menuIsOpen" x-transition.duration.800ms class="menu">
     
-            <button class="icon_cross_menu" @click="menuIsOpen = ! menuIsOpen">
-                <img class="icon_cross_menu" src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="Icone croix pour quitter le menu">
+            <button class="icon_cross_menu imgcross" @click="menuIsOpen = ! menuIsOpen">
+                <img class="icon_cross_menu" src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="#">
             </button>
             <h2>Menu</h2>
             <ul>
-                <li class="header_text"><a href="./page_musique.html">Une musique interessante</a></li>
-                <li><a href="./page_livre.html">Le livre pour l’environnement</a></li>
-                <li><a href="./page_serie.html">La Série qui résume tout</a></li>
-                <li><a href="./page_lieu.html">le lieu le plus inégalitaire du monde</a></li>
-                <li><a href="./page_espoir.html">Un grand Espoirs de ce monde</a></li>
-                <li><a href="./page_regret.html">Un Regret de cette génération</a></li>
-                <li><a href="./autres_projets.html">Autres Projets</a></li>
+                <li class="header_text"><a href="./music.html" style="color: #000000">An interesting music</a></li>
+                <li><a href="./book.html" style="color: #000000">The book for the environment</a></li>
+                <li><a href="./series.html" style="color: #000000">The Series that sums it all up</a></li>
+                <li><a href="./place.html" style="color: #000000">Most unequal place in the world</a></li>
+                <li><a href="./hopes.html" style="color: #000000">A great hope for the world</a></li>
+                <li><a href="./regrets.html" style="color: #000000">A regret of this generation</a></li>
+                <li><a href="./other_project.html" style="color: #000000">Other project</a></li>
             </ul>
-            <div class="trait_séparation_menu"><hr></div>
-            <div class="text-align_menu">
+            <hr width="110%">
             <ul>
-                <a href="./glossaire.html">Glossaire</a>
-                <a href="./à_propos.html">À propos</a>
-                <a href="./page_contact.html">Contact</a>
+                <a href="./glossary.html" style="color: #000000" class="gac">Glossary</a>
+                <a href="./about_me.html" style="color: #000000" class="gac">About me</a>
+                <a href="./contact-me.html" style="color: #000000" class="gac">Contact</a>
             </ul>
-            </div>
             <ul>
                 <a href="./index.html"><img class="flag_fr"src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="Icone pour passer dans la langue francaise"></a>
                 <a href="./indexGB.html"><img class="flag_gb" src="./public/icon/tinify-2022-11-16T10_17_52/GB.webp" alt="Icone pour passer dans la langue anglaise"></a>
             </ul>
-        </nav>
+        </nav>         
     </header>
         <div class="container">
             <div class="row">
