rectification page serie body

--- a/series.html
+++ b/series.html
@@ -80,8 +80,8 @@
         We will see what Oda is up to in his work. He makes a lot of hidden 
         allusions which makes his style intriguing and interesting.
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op.webp" alt="#">
-    <p>One Piece logo</p>
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op.webp"  class="opseries" alt="#">
+    <p class="text-bottom-img">One Piece logo</p>
     <p>
         One Piece was chosen because of the lack of access to the same resources and also the ecological
         problems on Wano. There is racism on the island of the fish men and on the island of Sabaody.
@@ -113,7 +113,7 @@
         the population suffers a lot of illness due to the bacteria in the food and water.  
     </p>
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/wano.webp" alt="#">
-    <p>Image of air pollution in the One Piece series</p>
+    <p class="text-bottom-img">Image of air pollution in the One Piece series</p>
     <h3>The defence of other interests</h3>
     <p>
         In this series, Oda defends many things. He alludes to racism with the fish men who are discriminated 
@@ -123,27 +123,27 @@
         dragon or he will be killed on the spot. 
     </p>
     <img src="public/img/page série/tinify-2022-11-15T14_48_17/hp.webp" alt="#">
-    <p>Image of different fish men from the One Piece series.</p>
+    <p class="text-bottom-img">Image of different fish men from the One Piece series.</p>
     <h3>To conclude</h3>
     <p>
         We can see that Eiichirō Oda hates pollution and he is for ecology. This coincides with my book on pollution. 
         Oda is against the access of unequal distribution of food resources. There are many ecological problems. 
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/cpdp.webp" alt="#">
-    <p>Logo of the main crew of One Piece, called the Straw Hats.</p>
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/cpdp.webp" class="opchap" alt="#">
+    <p class="text-bottom-img">Logo of the main crew of One Piece, called the Straw Hats.</p>
     <h3>We will now look at the filmography of Eiichirō Oda</h3>
     <p>
         Eiichirō Oda, has only made One Piece during his career which continues because the series is not finished. 
         He won't release anything after One Piece, according to him because he dedicates all his life and it's been 
         more than 23 years that he publishes every week 1 episode. But he has published films and here they are. 
     </p>
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op gold.webp" alt="#">
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op red.webp" alt="#">
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op stampede.webp" alt="#">
-    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op Z.webp" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op gold.webp" class="opserie" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op red.webp" class="opserie" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op stampede.webp" class="opserie" alt="#">
+    <img src="public/img/page série/tinify-2022-11-15T14_48_17/op Z.webp" class="opserie" alt="#">
     <p>Carousel of the 4 best-selling Oda films.</p>
     <h3>Regarder le premier épisode de One Piece</h3>
-    <img src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="#">
+    <a href="https://www.crunchyroll.com/fr/series/GRMG8ZQZR/one-piece"><img src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="#"></a>
 
     <footer>
         <img src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="#">
