regrets body modification

--- a/regrets.html
+++ b/regrets.html
@@ -91,7 +91,7 @@
         In Somalia, Ethiopia and Kenya, 1.7 million children are severely malnourished. 
     </p>
     <img src="public/img/page regret/tinify-2022-11-15T14_28_2/enfant malnutrition.webp" alt="#">
-    <p>Picture of an undernourished child, very thin with a face of distress and fatigue.</p>
+    <p class="text-bottom-img">Picture of an undernourished child, very thin with a face of distress and fatigue.</p>
     <h3>The crisis has not helped</h3>
     <p>
         The Covid 19 crisis has only increased the number of people with poor access to food resources. 
@@ -110,7 +110,7 @@
         strategies to do this. 
     </p>
     <img src="public/img/page regret/tinify-2022-11-15T14_28_2/image-removebg-preview (8) 1.webp" alt="#">
-    <p>Drawing that represents the planet that is an open tap and that the water of the planet is disappearing little by little.</p>
+    <p class="text-bottom-img">Drawing that represents the planet that is an open tap and that the water of the planet is disappearing little by little.</p>
 
 
     <footer>
