place text modified

--- a/page_lieu.html
+++ b/page_lieu.html
@@ -120,7 +120,7 @@
         ils ont accès aux ressources pas saines, car trop cher et compliqué d’accès pour la majorité de 
         la population du pays.
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="#">
+    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="Photo d’un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.">
     <p class="text-bottom-img">Photo d’un bidonville en Afrique du Sud, on ressent la misère à travers cette photo.</p>
     <h3>En conclusion</h3>
     <p>
@@ -131,7 +131,7 @@
         alimentaire qui pour moi est la chose la plus importante car ils sont beaucoup à mourir de malnutrition 
         et de maladies due aux bactéries lié à l’eau potable qui un compliqué d’accès pour différentes familles.
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/Frise FR.webp" alt="#">
+    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/Frise FR.webp" alt="Frise chronologique sur les 9 pays les plus inégalitaires du monde avec en tête l’Afrique du Sud.">
     <p>Frise chronologique sur les 9 pays les plus inégalitaires du monde avec en tête l’Afrique du Sud.</p>
 
     <footer>
