--- a/place.html
+++ b/place.html
@@ -113,8 +113,8 @@
         mainly the black population, and others suffer from obesity because they have access to unhealthy resources, 
         which are too expensive and difficult to access for the majority of the country's population.
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="#">
-    <p>Photo of a slum in South Africa, you can feel the misery through this photo.</p>
+    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/image 25.webp" alt="Photo of a slum in South Africa, you can feel the misery through this photo.">
+    <p class="text-bottom-img">Photo of a slum in South Africa, you can feel the misery through this photo.</p>
     <h3>To conclude</h3>
     <p>
         We can see that the population is divided in two parts, on one side the white population and on the other the black South Africans. 
@@ -123,11 +123,11 @@
         most important thing because many people die of malnutrition and diseases due to bacteria linked to drinking water which is 
         difficult to access for different families.
     </p>
-    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/Frise GB.webp" alt="#">
+    <img src="public/img/page lieu/tinify-2022-11-15T14_20_57/Frise GB.webp" alt="Timeline of the 9 most unequal countries in the world, led by South Africa.">
     <p>Timeline of the 9 most unequal countries in the world, led by South Africa.</p>
 
     <footer>
-        <img src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="#">
+        <img src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="Logo of the creator of the WebSite">
         <h3>WebSite created by Sofiane Mouadeb in class from MMI Montbéliard</h3>
         <h2>Menu</h2>
         <p>Legal notice</p>
