--- a/page_livre.html
+++ b/page_livre.html
@@ -98,7 +98,7 @@
         de gaz fluorés, c’est des gaz à effet de serre qui dégrade la couche stratosphérique d’ozone qui 
         protège le vie sur la planète et sur les ultraviolets).
     </p>
-    <img src="public/img/page livre/tinify-2022-11-15T14_19_10/atm.webp" alt="#">
+    <img src="public/img/page livre/tinify-2022-11-15T14_19_10/atm.webp" alt="Image explicative de l’atmosphère.">
     <p class="text-bottom-img">Image explicative de l’atmosphère.</p>
     <h3>Les aspect de la pollution atmosphérique</h3>
     <p>
@@ -163,7 +163,7 @@
         si elles sont très importante au sein de la population mondiale. Les alternatives sont les donc les énergies renouvelables 
         comme les énergies solaire, éoliennes, hydraulique,… 
     </p>
-    <img src="public/img/page livre/tinify-2022-11-15T14_19_10/renouvelable.webp" alt="#">
+    <img src="public/img/page livre/tinify-2022-11-15T14_19_10/renouvelable.webp" alt="Photo avec des éoliennes et des panneaux solaires.">
     <p class="text-bottom-img">Photo avec des éoliennes et des panneaux solaires.</p>
     <h3>Voici un extrait du Livre :</h3>
     <p>
