modification of page contact

--- a/book.html
+++ b/book.html
@@ -97,7 +97,7 @@
         that degrade the stratospheric ozone layer that protects life on the planet from ultraviolet radiation).
     </p>
     <img src="public/img/page livre/tinify-2022-11-15T14_19_10/atm.webp" alt="#">
-    <p>Explanatory image of the atmosphere</p>
+    <p class="text-bottom-img">Explanatory image of the atmosphere</p>
     <h3>Aspects of air pollution</h3>
     <p>
         Air pollution comes from many different aspects such as planetary phenomena (volcanic eruption), 
@@ -156,8 +156,8 @@
         there are less greenhouse gas emissions. Fossil fuels should be abandoned even if they are very important 
         for the world population. The alternatives are renewable energies such as solar, wind, hydraulic,... 
     </p>
-    <img src="public/img/page livre/tinify-2022-11-15T14_19_10/renouvelable.webp" alt="#">
-    <p>Photo with windmills and solar panels</p>
+    <img src="public/img/page livre/tinify-2022-11-15T14_19_10/renouvelable.webp" alt="Photo with windmills and solar panels.">
+    <p class="text-bottom-img">Photo with windmills and solar panels.</p>
     <h3>Here is an extract from the book :</h3>
     <p>Is a book written in French.</p>
     <p> 
