--- a/contact-me.html
+++ b/contact-me.html
@@ -76,7 +76,7 @@
     </header>
         <div class="container">
             <div class="row">
-                    <h1 style="text-align:center">Contact us</h1>
+                    <h1 style="text-align:center">Contact us !</h1>
             </div>
             <div class="row">
                     <h4 style="text-align:center">If you have anything to make us look good.</h4>
@@ -84,30 +84,30 @@
             </div>
             <div class="row input-container">
                     <div class="col-xs-12">
+                        <p class="replacetext">Name</p> 
                         <div class="styled-input wide">
                             <input type="text" required />
-                            <label>Name</label> 
                         </div>
                     </div>
                     <br>
                     <div class="col-md-6 col-sm-12">
+                        <p class="replacetext">Email</p> 
                         <div class="styled-input">
-                            <input type="text" required />
-                            <label>Email</label> 
+                            <input type="text" required /> 
                         </div>
                     </div>
                     <br>
                     <div class="col-md-6 col-sm-12">
+                        <p class="replacetext">Phone number</p> 
                         <div class="styled-input">
                             <input type="text" required />
-                            <label>Phone Number</label> 
                         </div>
                     </div>
                     <br>
                     <div class="col-xs-12">
+                        <p class="replacetext"> Your message</p> 
                         <div class="styled-input wide1">
                             <textarea required></textarea>
-                            <label>Message</label>
                         </div>
                     </div>
                     <br>
