--- a/glossaire.html
+++ b/glossaire.html
@@ -78,22 +78,28 @@
 <body>
     <h1>Glossaire</h1>
     <p>
-        <h4>Atmosphère :</h4> On appelle « atmosphère » l'enveloppe gazeuse qui entoure certains corps célestes comme, 
+        <h4>Atmosphère :</h4> 
+        On appelle « atmosphère » l'enveloppe gazeuse qui entoure certains corps célestes comme, 
         par exemple, la Terre, Vénus ou Mars. Les gaz sont maintenus autour de ces corps célestes par la force 
         gravitationnelle qui les retient et les empêche de s'échapper vers l'espace.
-        <h4>Gaz à effet de serre :</h4> En matière de climat, l'effet de serre est un phénomène naturel qui contribue 
+        <h4>Gaz à effet de serre :</h4> 
+        En matière de climat, l'effet de serre est un phénomène naturel qui contribue 
         au niveau de température moyen à la surface d'une planète dotée d'une atmosphère.
-        <h4>Gaz fluorés :</h4> Les gaz fluorés sont des gaz d'origine anthropique employés dans une série d'applications 
+        <h4>Gaz fluorés :</h4> 
+        Les gaz fluorés sont des gaz d'origine anthropique employés dans une série d'applications 
         industrielles. Ils sont souvent utilisés comme substituts aux substances appauvrissant la couche d'ozone parce 
         qu'ils n'endommagent pas la couche d'ozone atmosphérique.
-        <h4>Ultra-violets :</h4> On qualifie de rayonnement ultraviolet (UV), un rayonnement électromagnétique de même 
+        <h4>Ultra-violets :</h4> 
+        On qualifie de rayonnement ultraviolet (UV), un rayonnement électromagnétique de même 
         nature que la lumière visible. Toutefois ses longueurs d’onde, comprises entre 20 nm et 400 nm, sont trop courtes 
         pour être perceptibles par l'œil humain. L'énergie que ce rayonnement transporte, en revanche, est d'autant plus 
         importante que la longueur d'onde est faible. Elle peut provoquer des dommages au corps humain.
-        <h4>Apartheid :</h4> C'est un système d'oppression et de domination d'un groupe racial sur un autre, institutionnalisé 
+        <h4>Apartheid :</h4> 
+        C'est un système d'oppression et de domination d'un groupe racial sur un autre, institutionnalisé 
         à travers des lois, des politiques et des pratiques discriminatoires. Par ailleurs, le crime d'apartheid suppose la 
         commission d'actes inhumains, dans l'intention de maintenir cette domination.
-        <h4>Tchernobyl :</h4> Le 26 avril 1986, à 1h23 du matin, le réacteur n°4 de la centrale nucléaire de Tchernobyl, de 
+        <h4>Tchernobyl :</h4> 
+        Le 26 avril 1986, à 1h23 du matin, le réacteur n°4 de la centrale nucléaire de Tchernobyl, de 
         conception soviétique des années 1960, explosait. Cet accident reste à ce jour le plus grave jamais survenu sur une 
         installation nucléaire civile.
     </p>
