--- a/glossary.html
+++ b/glossary.html
@@ -76,21 +76,27 @@
     </header>
     <h1>Glossary</h1>
     <p>
-        <h4>Atmosphere :</h4> The gaseous envelope surrounding certain celestial bodies such as the Earth, 
+        <h4>Atmosphere :</h4> 
+        The gaseous envelope surrounding certain celestial bodies such as the Earth, 
         Venus or Mars is called the atmosphere. Gases are held around these celestial bodies by the 
         gravitational force that holds them and prevents them from escaping into space.
-        <h4>Greenhouse gases :</h4> In climate, the greenhouse effect is a natural phenomenon that contributes 
+        <h4>Greenhouse gases :</h4> 
+        In climate, the greenhouse effect is a natural phenomenon that contributes 
         to the average temperature level on the surface of a planet with an atmosphere.
-        <h4>Fluorinated gases :</h4> Fluorinated gases are man-made gases used in a range of industrial applications. 
+        <h4>Fluorinated gases :</h4> 
+        Fluorinated gases are man-made gases used in a range of industrial applications. 
         They are often used as substitutes for ozone-depleting substances because they do not damage the atmospheric ozone layer.
-        <h4>Ultraviolet :</h4> Ultraviolet (UV) radiation is electromagnetic radiation of the same nature as visible light. 
+        <h4>Ultraviolet :</h4> 
+        Ultraviolet (UV) radiation is electromagnetic radiation of the same nature as visible light. 
         However, its wavelengths, between 20 nm and 400 nm, are too short to be perceived by the human eye. 
         The energy that this radiation carries, on the other hand, is greater the shorter the wavelength. 
         It can cause damage to the human body.
-        <h4>Apartheid :</h4> This is a system of oppression and domination of one racial group over another, 
+        <h4>Apartheid :</h4> 
+        This is a system of oppression and domination of one racial group over another, 
         institutionalised through discriminatory laws, policies and practices. Furthermore, the crime of apartheid involves 
         the commission of inhumane acts, with the intention of maintaining this domination.
-        <h4>Tchernobyl :</h4> On 26 April 1986, at 1.23 am, the reactor No. 4 of the Tchernobyl nuclear power plant, a Soviet 
+        <h4>Tchernobyl :</h4> 
+        On 26 April 1986, at 1.23 am, the reactor No. 4 of the Tchernobyl nuclear power plant, a Soviet 
         design from the 1960s, exploded. This remains the most serious accident ever to occur at a civilian nuclear facility.
     </p>
 
