--- a/page_contact.html
+++ b/page_contact.html
@@ -84,30 +84,30 @@
             </div>
             <div class="row input-container">
                     <div class="col-xs-12">
+                        <p class="replacetext">Nom</p>
                         <div class="styled-input wide">
                             <input type="text" required />
-                            <label>Nom</label> 
                         </div>
                     </div>
                     <br>
                     <div class="col-md-6 col-sm-12">
+                        <p class="replacetext">Email</p>
                         <div class="styled-input">
                             <input type="text" required />
-                            <label>Email</label> 
                         </div>
                     </div>
                     <br>
                     <div class="col-md-6 col-sm-12">
+                        <p class="replacetext">Numéro de téléphone</p>
                         <div class="styled-input">
-                            <input type="text" required />
-                            <label>Numéro de téléphone</label> 
+                            <input type="text" required />                 
                         </div>
                     </div>
                     <br>
                     <div class="col-xs-12">
+                        <p class="replacetext">Votre message</p>
                         <div class="styled-input wide1">
                             <textarea required></textarea>
-                            <label>Votre message</label>
                         </div>
                     </div>
                     <br>
