--- a/series.html
+++ b/series.html
@@ -146,7 +146,7 @@
     <a href="https://www.crunchyroll.com/fr/series/GRMG8ZQZR/one-piece"><img src="public/icon/tinify-2022-11-16T10_17_52/Série link.webp" alt="#"></a>
 
     <footer>
-        <img src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="#">
+        <img src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="Logo of the creator of the WebSite">
         <h3>WebSite created by Sofiane Mouadeb in class from MMI Montbéliard</h3>
         <h2>Menu</h2>
         <p>Legal notice</p>
