--- a/à_propos.html
+++ b/à_propos.html
@@ -74,7 +74,8 @@
             </ul>
         </nav>         
     </header>   
-    <p>
+    <h1> À propos</h1>
+    <H4>
         Le thème que j’ai choisi est fondé sur mon article sur One Piece car tous mes 
         autres articles coïncides avec celui-ci. 
         Dans One Piece, il y a une dénonciation de la pollution ce que j’ai faits avec mon 
@@ -84,7 +85,7 @@
         Et enfin, ma musique coïncide avec mon thème général du monde actuel avec 
         l’argent au centre des intérêts, de la consommation de masse, les aléas du renouveau, 
         les personnes accros avec leurs téléphones, ...
-    </p>
+    </H4>
 
     
     <footer>
