--- a/hopes.html
+++ b/hopes.html
@@ -95,8 +95,8 @@
         speaking. In 1981, he announced that he was running for president but quickly withdrew. All this because of 
         threats and pressure.
     </p>
-    <img src="public/img/page espoir/tinify-2022-11-15T14_17_49/photo coluche.webp" alt="#">
-    <p>
+    <img src="public/img/page espoir/tinify-2022-11-15T14_17_49/photo coluche.webp" alt="Photo of Coluche in black and white with the logo 'Les Restaurants du coeur' in the bottom right corner of  the picture.">
+    <p class="text-bottom-img">
         Photo of Coluche in black and white with the logo "Les Restaurants du coeur" in the bottom right corner of 
         the picture.
     </p>
@@ -110,8 +110,8 @@
         Coluche died in 1986, very quickly after the creation of his association, but this association has become a 
         monument in France. 
     </p>
-    <img src="public/img/page espoir/tinify-2022-11-15T14_17_49/resto du coeur.webp" alt="#">
-    <p>Image of the logo "Les restaurants du coeur".</p>
+    <img src="public/img/page espoir/tinify-2022-11-15T14_17_49/resto du coeur.webp" alt="Image of the logo 'Les restaurants du coeur'.">
+    <p class="text-bottom-img">Image of the logo "Les restaurants du coeur".</p>
     <h3>Other types of aid ?</h3>
     <p>
         There are also kitchens which are a way to help people in precarious situations. But there are frauds concerning 
