--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <br>
         <p class="text-accueil">
             Dans cet article, vous retrouverez ma description de la série One Piece créée par Eiichirō Oda.</p>
-        <p class="text-accueil">Contenu de l’article : Nous allons voir ce que Oda insinuz dans son oeuvre. Il fait pas mal 
+        <p class="text-accueil">Contenu de l’article : Nous allons voir ce que Oda insinu dans son oeuvre. Il fait pas mal 
             d’allusions cachés ce qui fait son style intrigant et intéressant de l’oeuvre.
         </p> 
             <a href="./page_serie.html"><button class="ensavoirplusbtn">En Savoir Plus</button></a>
