--- a/contact-me.html
+++ b/contact-me.html
@@ -122,15 +122,15 @@
     <footer>
         <div class="logo__texte_ms">
             <img class="logo_ms" src="public/icon/tinify-2022-11-16T10_17_52/MS.webp" alt="Logo du créateur du site">
-            <h3 class="created_by_footer">Site créé par Sofiane Mouadeb en classe de MMI Montbéliard</h3>
+            <h3 class="created_by_footer">WebSite created by Sofiane Mouadeb in class from MMI Montbéliard</h3>
         </div>
         <h2>Menu</h2>
-        <p>Mention légale</p>
+         <p>Legal notice</p>
         <p>Contact</p>    
         <p>Contact</p> 
         <p>4 Place Tharradin</p>
         <p>25200 Montbéliard</p>      
-        <h4>Suivre l'IUT MMI</h4>
+        <h4>Follow l'IUT MMI</h4>
         <div class="icon">
             <div class="icon_facebook"><a href="https://fr-fr.facebook.com/mmimontbeliard/"><img src="/public/icon/tinify-2022-11-16T10_17_52/facebook 1.webp" alt="logo facebook"></a></div>
             <div class="icon_twitter"><a href="https://twitter.com/mmimontbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/twitter 1.webp" alt="logo twitter"></a></div>
@@ -139,16 +139,17 @@
             <div class="icon_twitch"><a href="https://www.twitch.tv/unifiedchampions"><img src="public/icon/tinify-2022-11-16T10_17_52/twitch .webp" alt="logo twitch"></a></div>
             <div class="icon_tiktok"><a href="https://www.tiktok.com/@mmi_montbeliard"><img src="public/icon/tinify-2022-11-16T10_17_52/tiktok.webp" alt="logo facebook"></a></div>
         </div>
-            <p>Mon e-mail personnel :</p>
-            <a href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=new" target="_blank">
-                <p>
+            <p>My mail personal :</p>
+            <a href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=new" style="color: #56A99F" target="_blank">
+                <p class="footer_link">
                     sofiane.mouadeb.70000@gmail.com</a>
                 </p>
-            <p>Ce projet a été réaliser dans le cadre  d’un exercice pédagogique au 
-            <a href="http://mmimontbeliard.com/" target="_blank">dépatement MMI de Montbéliard</a></p>
-            <p>Université Nord Franche-Comté</p>
-            <a href="http://mmimontbeliard.com/" target="_blank">IUT MMI Montbéliard</a></p>
+            <p>This project was carried out as part of an educational exercise at
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">the MMI department in Montbéliard.</a></p>
+            <p>University Nord Franche-Comté</p>
+            <a href="http://mmimontbeliard.com/" style="color: #56A99F" class="footer_link" target="_blank">IUT MMI Montbéliard</a></p>
             <img src="./public/icon/tinify-2022-11-16T10_17_52/mmi logo.webp" alt="Logo MMI Montbéliard">
     </footer>
 </body>
 </html>
+
