--- a/à_propos.html
+++ b/à_propos.html
@@ -52,18 +52,18 @@
             <button class="icon_cross_menu imgcross" @click="menuIsOpen = ! menuIsOpen">
                 <img class="icon_cross_menu" src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="Icone croix pour quitter le menu">
             </button>
-            <h2>Menu</h2>
+            <h1 class="textmenu">Menu</h1>
             <ul>
-                <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li>
-                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li>
-                <li><a href="./page_serie.html" style="color: #000000">La Série qui résume tout</a></li>
-                <li><a href="./page_lieu.html" style="color: #000000">le lieu le plus inégalitaire du monde</a></li>
-                <li><a href="./page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li>
-                <li><a href="./page_regret.html" style="color: #000000">Un Regret de cette génération</a></li>
-                <li><a href="./autres_projets.html" style="color: #000000">Autres Projets</a></li>
+                <li class="header_text"><a href="./page_musique.html" style="color: #000000">Une musique interessante</a></li><br>
+                <li><a href="./page_livre.html" style="color: #000000">Le livre pour l’environnement</a></li><br>
+                <li><a href="./page_serie.html" style="color: #000000">La Série qui résume tout</a></li><br>
+                <li><a href="./page_lieu.html" style="color: #000000">Le lieu le plus inégalitaire du monde</a></li><br>
+                <li><a href="./page_espoir.html" style="color: #000000">Un grand Espoirs de ce monde</a></li><br>
+                <li><a href="./page_regret.html" style="color: #000000">Un Regret de cette génération</a></li><br>
+                <li><a href="./autres_projets.html" style="color: #000000">Autres Projets</a></li><br>
             </ul>
             <hr width="110%">
-            <ul>
+            <ul class="ululul">
                 <a href="./glossaire.html" style="color: #000000" class="gac">Glossaire</a>
                 <a href="./à_propos.html" style="color: #000000" class="gac">À propos</a>
                 <a href="./page_contact.html" style="color: #000000" class="gac">Contact</a>
@@ -73,7 +73,7 @@
                 <a href="./indexGB.html"><img class="flag_gb" src="./public/icon/tinify-2022-11-16T10_17_52/GB.webp" alt="Icone pour passer dans la langue anglaise"></a>
             </ul>
         </nav>         
-    </header>   
+    </header>  
     <h1> À propos</h1>
     <H4>
         Le thème que j’ai choisi est fondé sur mon article sur One Piece car tous mes 
