--- a/hopes.html
+++ b/hopes.html
@@ -52,18 +52,18 @@
             <button class="icon_cross_menu imgcross" @click="menuIsOpen = ! menuIsOpen">
                 <img class="icon_cross_menu" src="/public/icon/tinify-2022-11-16T10_17_52/croix.webp" alt="#">
             </button>
-            <h2>Menu</h2>
+            <h1 class="textmenu">Menu</h1>
             <ul>
-                <li class="header_text"><a href="./music.html" style="color: #000000">An interesting music</a></li>
-                <li><a href="./book.html" style="color: #000000">The book for the environment</a></li>
-                <li><a href="./series.html" style="color: #000000">The Series that sums it all up</a></li>
-                <li><a href="./place.html" style="color: #000000">Most unequal place in the world</a></li>
-                <li><a href="./hopes.html" style="color: #000000">A great hope for the world</a></li>
-                <li><a href="./regrets.html" style="color: #000000">A regret of this generation</a></li>
-                <li><a href="./other_project.html" style="color: #000000">Other project</a></li>
+                <li class="header_text"><a href="./music.html" style="color: #000000">An interesting music</a></li><br>
+                <li><a href="./book.html" style="color: #000000">The book for the environment</a></li><br>
+                <li><a href="./series.html" style="color: #000000">The Series that sums it all up</a></li><br>
+                <li><a href="./place.html" style="color: #000000">Most unequal place in the world</a></li><br>
+                <li><a href="./hopes.html" style="color: #000000">A great hope for the world</a></li><br>
+                <li><a href="./regrets.html" style="color: #000000">A regret of this generation</a></li><br>
+                <li><a href="./other_project.html" style="color: #000000">Other project</a></li><br>
             </ul>
             <hr width="110%">
-            <ul>
+            <ul class="ululul">
                 <a href="./glossary.html" style="color: #000000" class="gac">Glossary</a>
                 <a href="./about_me.html" style="color: #000000" class="gac">About me</a>
                 <a href="./contact-me.html" style="color: #000000" class="gac">Contact</a>
