--- a/hopes.html
+++ b/hopes.html
@@ -64,9 +64,9 @@
             </ul>
             <hr width="110%">
             <ul class="ululul">
-                <a href="./glossary.html" style="color: #000000" class="gac">Glossary</a>
-                <a href="./about_me.html" style="color: #000000" class="gac">About me</a>
-                <a href="./contact-me.html" style="color: #000000" class="gac">Contact</a>
+                <a href="./glossary.html" style="color: #000000" class="gac1">Glossary</a>
+                <a href="./about_me.html" style="color: #000000" class="gac1">About me</a>
+                <a href="./contact-me.html" style="color: #000000" class="gac1">Contact</a>
             </ul>
             <ul>
                 <a href="./index.html"><img class="flag_fr"src="./public/icon/tinify-2022-11-16T10_17_52/FR.webp" alt="Icone pour passer dans la langue francaise"></a>
