fautes de copie

--- a/page_musique.html
+++ b/page_musique.html
@@ -154,13 +154,12 @@
 
     <h3>Ce qu’il resort de la musique</h3>
     <p>
-        Avec ces paroles, l’artiste nous montre que monde est omnibuler par l’argent et la 
-        consommation on peut peut-être parler de la consommation de masse. 
+        Avec ces paroles, l’artiste nous montre que le monde est omnibuler par l’argent et la 
+        consommation on peut peut-être même parler de la consommation de masse. 
         Il y a un emprisonnement de la personne sur son téléphone avec les notifications et il est 
-        aussi un outils de travail car ces notifs montre aussi son avancement dans son bisness, les 
+        aussi un outils de travail car ces notifs montrent aussi son avancement dans son bisness. Les 
         personnes ne l’appel que pour le bisness et donc pour gagner de l’argent qui montre la consommation de masse.
-        Il y a donc une petite de passion dans ces musiques mais son objectifs premiers c’est de gagner un maximum d’argents 
-        et qu’il fait de la musique plus pour consommer et gagner beaucoup.
+        Il a donc une petite passion pour la musique mais son objectif premier c’est de gagner un maximum d’argents.
         Les gens l’envie avec les notifications qu’il reçoit car c’est l’argent qui vient a lui en quelque sorte. 
         Ces notifications parle que du business les personnes ne se soucie que de l’argent et non pas de sa personne.
         Cela montre qu’il a des personnes marre de travailler pour gagnés leur argent quotidiennement. Il montre que les 
